refactor: Java 21 기능 적용 및 코드 네이밍 통일
- GameResult에서 Sequenced Collections (getLast) 활용
- Records 및 Enums와의 일관성을 위해 getter 이름을 value()로 통일
- 모든 호출부 및 테스트 업데이트